--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 Django==4.2
 djangorestframework==3.14.0
 python-decouple==3.8
-python-decouple
 Pillow==10.0.0
 django-widget-tweaks==1.4.12
 django-filter==23.2
@@ -9,3 +8,8 @@ django-crispy-forms==2.0
 crispy-bootstrap5==0.7
 whitenoise==6.5.0
 gunicorn==21.2.0
+psycopg2-binary==2.9.6
+dj-database-url==2.0.0
+gevent==22.10.2
+django-storages==1.13.2
+boto3==1.28.3
